// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChooseRouteDropdown /> Filters shown routes when query is set 1`] = `
<DocumentFragment>
  <div
    class="relative w-full"
    data-testid="ChooseRouteDropdown1"
    id="choose-route-combobox"
  >
    <input
      aria-expanded="false"
      class="input-element relative h-full w-full"
      data-testid="ChooseRouteDropdown1-input"
      id="headlessui-combobox-input-7"
      role="combobox"
      type="text"
    />
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="absolute inset-y-0 right-0 flex h-full w-full items-center justify-end px-3 text-left focus:outline-none"
      data-testid="ChooseRouteDropdown1-button"
      id="headlessui-combobox-button-8"
      tabindex="-1"
      type="button"
    >
      <div
        class="w-full"
      >
        Valitse reitti
      </div>
      <svg
        class="mr-1 ml-auto text-2xl text-tweaked-brand"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0016 9.5 6.5 6.5 0 109.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
      <i
        class="icon-arrow text-tweaked-brand transition duration-150 ease-in-out rotate-0"
        style="font-size: 10px;"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`<ChooseRouteDropdown /> Filters shown routes when query is set 2`] = `
<DocumentFragment>
  <div
    class="relative w-full"
    data-testid="ChooseRouteDropdown1"
    id="choose-route-combobox"
  >
    <input
      aria-expanded="false"
      class="input-element relative h-full w-full"
      data-testid="ChooseRouteDropdown1-input"
      id="headlessui-combobox-input-7"
      role="combobox"
      type="text"
    />
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="absolute inset-y-0 right-0 flex h-full w-full items-center justify-end px-3 text-left focus:outline-none"
      data-testid="ChooseRouteDropdown1-button"
      id="headlessui-combobox-button-8"
      tabindex="-1"
      type="button"
    >
      <div
        class="w-full"
      >
        Valitse reitti
      </div>
      <svg
        class="mr-1 ml-auto text-2xl text-tweaked-brand"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0016 9.5 6.5 6.5 0 109.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
      <i
        class="icon-arrow text-tweaked-brand transition duration-150 ease-in-out rotate-0"
        style="font-size: 10px;"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`<ChooseRouteDropdown /> Filters shown routes when query is set 3`] = `
<DocumentFragment>
  <div
    class="relative w-full"
    data-testid="ChooseRouteDropdown1"
    id="choose-route-combobox"
  >
    <input
      aria-controls="headlessui-combobox-options-10"
      aria-expanded="true"
      class="input-element relative h-full w-full"
      data-testid="ChooseRouteDropdown1-input"
      id="headlessui-combobox-input-7"
      role="combobox"
      type="text"
    />
    <button
      aria-controls="headlessui-combobox-options-10"
      aria-expanded="true"
      aria-haspopup="true"
      class="absolute inset-y-0 right-0 flex h-full w-full items-center justify-end px-3 text-left focus:outline-none"
      data-testid="ChooseRouteDropdown1-button"
      id="headlessui-combobox-button-8"
      tabindex="-1"
      type="button"
    >
      <svg
        class="mr-1 ml-auto text-2xl text-tweaked-brand"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0016 9.5 6.5 6.5 0 109.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
      <i
        class="icon-arrow text-tweaked-brand transition duration-150 ease-in-out -rotate-180"
        style="font-size: 10px;"
      />
    </button>
    <ul
      aria-labelledby="headlessui-combobox-button-8"
      class="absolute left-0 z-10 w-full rounded-b-md border border-black border-opacity-20 bg-white shadow-md focus:outline-none transition ease-out duration-100 opacity-0 scale-95"
      id="headlessui-combobox-options-10"
      role="listbox"
    >
      <li
        id="headlessui-combobox-option-11"
        role="option"
        tabindex="-1"
      >
        <span
          class=" flex group text-left pr-2 py-2 focus:outline-none items-center"
        >
          <svg
            class="mx-1 text-2xl invisible"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
            />
          </svg>
          <div
            class="flex flex-col"
          >
            <div>
              <span
                class="font-bold"
              >
                123
              </span>
               | Route 1
            </div>
            <div
              class="text-sm"
            >
              21.3.2022 - 29.3.2022
            </div>
          </div>
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<ChooseRouteDropdown /> Opens dropdown when clicked and shows all routes 1`] = `
<DocumentFragment>
  <div
    class="relative w-full"
    data-testid="ChooseRouteDropdown1"
    id="choose-route-combobox"
  >
    <input
      aria-expanded="false"
      class="input-element relative h-full w-full"
      data-testid="ChooseRouteDropdown1-input"
      id="headlessui-combobox-input-1"
      role="combobox"
      type="text"
    />
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="absolute inset-y-0 right-0 flex h-full w-full items-center justify-end px-3 text-left focus:outline-none"
      data-testid="ChooseRouteDropdown1-button"
      id="headlessui-combobox-button-2"
      tabindex="-1"
      type="button"
    >
      <div
        class="w-full"
      >
        Valitse reitti
      </div>
      <svg
        class="mr-1 ml-auto text-2xl text-tweaked-brand"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0016 9.5 6.5 6.5 0 109.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
      <i
        class="icon-arrow text-tweaked-brand transition duration-150 ease-in-out rotate-0"
        style="font-size: 10px;"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`<ChooseRouteDropdown /> Opens dropdown when clicked and shows all routes 2`] = `
<DocumentFragment>
  <div
    class="relative w-full"
    data-testid="ChooseRouteDropdown1"
    id="choose-route-combobox"
  >
    <input
      aria-expanded="false"
      class="input-element relative h-full w-full"
      data-testid="ChooseRouteDropdown1-input"
      id="headlessui-combobox-input-1"
      role="combobox"
      type="text"
    />
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="absolute inset-y-0 right-0 flex h-full w-full items-center justify-end px-3 text-left focus:outline-none"
      data-testid="ChooseRouteDropdown1-button"
      id="headlessui-combobox-button-2"
      tabindex="-1"
      type="button"
    >
      <div
        class="w-full"
      >
        Valitse reitti
      </div>
      <svg
        class="mr-1 ml-auto text-2xl text-tweaked-brand"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0016 9.5 6.5 6.5 0 109.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
      <i
        class="icon-arrow text-tweaked-brand transition duration-150 ease-in-out rotate-0"
        style="font-size: 10px;"
      />
    </button>
  </div>
</DocumentFragment>
`;

exports[`<ChooseRouteDropdown /> Opens dropdown when clicked and shows all routes 3`] = `
<DocumentFragment>
  <div
    class="relative w-full"
    data-testid="ChooseRouteDropdown1"
    id="choose-route-combobox"
  >
    <input
      aria-controls="headlessui-combobox-options-4"
      aria-expanded="true"
      class="input-element relative h-full w-full"
      data-testid="ChooseRouteDropdown1-input"
      id="headlessui-combobox-input-1"
      role="combobox"
      type="text"
    />
    <button
      aria-controls="headlessui-combobox-options-4"
      aria-expanded="true"
      aria-haspopup="true"
      class="absolute inset-y-0 right-0 flex h-full w-full items-center justify-end px-3 text-left focus:outline-none"
      data-testid="ChooseRouteDropdown1-button"
      id="headlessui-combobox-button-2"
      tabindex="-1"
      type="button"
    >
      <div
        class="w-full"
      >
        Valitse reitti
      </div>
      <svg
        class="mr-1 ml-auto text-2xl text-tweaked-brand"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0016 9.5 6.5 6.5 0 109.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
        />
      </svg>
      <i
        class="icon-arrow text-tweaked-brand transition duration-150 ease-in-out -rotate-180"
        style="font-size: 10px;"
      />
    </button>
    <ul
      aria-labelledby="headlessui-combobox-button-2"
      class="absolute left-0 z-10 w-full rounded-b-md border border-black border-opacity-20 bg-white shadow-md focus:outline-none transition ease-out duration-100 opacity-0 scale-95"
      id="headlessui-combobox-options-4"
      role="listbox"
    >
      <li
        id="headlessui-combobox-option-5"
        role="option"
        tabindex="-1"
      >
        <span
          class=" flex group text-left pr-2 py-2 focus:outline-none items-center"
        >
          <svg
            class="mx-1 text-2xl invisible"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
            />
          </svg>
          <div
            class="flex flex-col"
          >
            <div>
              <span
                class="font-bold"
              >
                123
              </span>
               | Route 1
            </div>
            <div
              class="text-sm"
            >
              21.3.2022 - 29.3.2022
            </div>
          </div>
        </span>
      </li>
      <li
        id="headlessui-combobox-option-6"
        role="option"
        tabindex="-1"
      >
        <span
          class=" flex group text-left pr-2 py-2 focus:outline-none items-center"
        >
          <svg
            class="mx-1 text-2xl invisible"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
            />
          </svg>
          <div
            class="flex flex-col"
          >
            <div>
              <span
                class="font-bold"
              >
                456
              </span>
               | Route 2
            </div>
            <div
              class="text-sm"
            >
              2.1.2021 - 31.12.2022
            </div>
          </div>
        </span>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
